--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
-h1 {
+/* to stop navbar from overlapping onto header */
+body {
+  padding-top: 30px;
+}
+
+.jumbotron {
+  position: relative;
+  background-image: url(../images/lemonade.png);
+  background-size: cover;
+  min-height: 500px;
   color: white;
+  font-family: Helvetica;
+  font-weight: bold;
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
