--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,13 @@ body, html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+}
+
+.navbar {
+    background-color: white;
+    opacity: 0.75;
+    border: none;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Lato);
