--- a/css/main.css
+++ b/css/main.css
@@ -1,53 +1,78 @@
-/* to stop navbar from overlapping onto header */
 body {
-  padding-top: 50px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-}
-
-body, html {
-    height: 100%;
-}
-
-.jumbotron {
+  padding-top: 80px;
+  color: black;
   position: relative;
-  /* background image */
-  background-image: url(../images/love-drought.jpg);
-  /* full height */
-  height: 100%;
-  /* size ans scale image */
-  background-size: cover;
-  background-position: center;
-
-  color: white;
-}
-
-.container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
 }
 
 .navbar {
     background-color: white;
-    opacity: 0.75;
     border: none;
+    height: 80px;
+}
+
+.navbar {
+    float:none;
+    display: block;
+    text-align: center;
+}
+
+.nav  li {
+    display: inline-block;
+    float:none;
+}
+
+.navbar-brand {
+  padding-top: 15px;
+}
+
+.nav {
+  padding-top: 15px;
+}
+
+.dropdown-toggle {
+  text-align: center;
+}
+
+/*.navbar {
+  font-size: 18px;
+}*/
+
+.header {
+  /* background image */
+  background-image: url(../images/love-drought.jpg);
+  /* full height */
+  height: 700px;
+  /* size ans scale image */
+  background-size: cover;
+  background-position: center;
+  /*background-attachment: fixed;*/
+
+}
+
+
+.col-sm-6 {
+  border-top: 200px;
+}
+.container {
+border-top: 200px;
+}
+
+
+.intro {
+  background-color: #c8a966;
+  /*top: 500px;*/
+  /*width: 500px;*/
+  color: white;
+}
+
+.upcoming {
+  background-color: #f2f2f2;
+  color: white;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
-
-.social-icons-navbar {
-  padding-left: 10px;
-}
-
-.social-icons-navbar a {
-    color: #000;
-    display: inline;
-}
 
 .social-icons a {
     color: #fff;
