--- a/css/main.css
+++ b/css/main.css
@@ -10,27 +10,19 @@ body {
     height: 80px;
 }
 
-.navbar {
-    float:none;
-    display: block;
-    text-align: center;
-}
-
-.nav  li {
-    display: inline-block;
-    float:none;
-}
-
 .navbar-brand {
   padding-top: 15px;
 }
 
 .nav {
   padding-top: 15px;
+  align-content: center;
 }
 
-.dropdown-toggle {
-  text-align: center;
+.navbar-nav {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 /*.navbar {
