--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 body {
   padding-top: 80px;
-  color: black;
-  position: relative;
 }
+
+/******************************************************************************/
 
 .navbar {
     background-color: white;
@@ -10,13 +10,37 @@ body {
     height: 80px;
 }
 
+.navbar-header {
+  height: 80px;
+}
+
+.navbar-toggle {
+  margin-top: 17px;
+  margin-bottom: 17px;
+}
+
 .navbar-brand {
   padding-top: 15px;
 }
 
+.navbar .navbar-header .icon-bar {
+  width: 100%;
+  height: 2px;
+  background-color: #200e11;
+}
+
+.navbar .navbar-header .menu-label {
+  color: black;
+font-weight: 400;
+  font-size: 8px;
+  letter-spacing: .7px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: -4px;
+}
+
 .nav {
   padding-top: 15px;
-  align-content: center;
 }
 
 .navbar-nav {
@@ -28,6 +52,8 @@ body {
 /*.navbar {
   font-size: 18px;
 }*/
+
+/******************************************************************************/
 
 .header {
   /* background image */
